# p4-infra

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  format.sh  install_dependencies.sh  p4_infra_deps.bzl
.github/workflows/: ci.yml
netaddr/: BUILD.bazel  ipv4_address.cc  ipv4_address.h  ipv6_address.cc  ipv6_address.h  mac_address.cc  mac_address.h  network_address.h
p4_pdpi/: BUILD.bazel  README.md  built_ins.cc  built_ins.h  built_ins_test.cc  ir.cc  ir.h  ir.proto  ir_tools.cc  ir_utils.cc  ir_utils.h  ir_utils_test.cc  main.p4  main_p4_pd.expected  p4_runtime_session.cc  p4_runtime_session_extras.cc  p4_runtime_session_extras.h  p4_runtime_session_extras_test.cc  p4info.expected  p4info_union_lib.cc  p4info_union_lib.h  p4info_union_test.cc  pd.cc  pd.h  pd_test.cc  pdgen.bzl  pdgenlib.cc  pi.h  reference_annotations.cc  reference_annotations.h  references.cc  references.h  references.md  references_benchmark.cc  references_test.cc  rpc.expected  rpc_test_runner.cc  sequencing.cc  sequencing.expected  sequencing.h  (+6 more)
p4_pdpi/images/: README.md  direct_reference.dot  illegal_delete.dot  illegal_insert.dot  multicast_builtin.dot  multicast_replica.dot  reachability_gc.dot  recursive_cycle.dot  self_reference.dot  transitive_chain.dot  valid_reference.dot
p4_pdpi/testing/: BUILD.bazel  table_entry_gunit_test.cc
p4_pdpi/testing/testdata/: info.expected
packetlib/: BUILD.bazel  bit_widths.h  packetlib.cc  packetlib.h  packetlib.proto  packetlib_test_runner.cc  packetlib_test_runner.expected  packetlib_unit_test.cc
patches/: BUILD.bazel  grpc_memory_request_fix.patch  grpc_missing_includes.patch  grpc_property_list_fix.patch
string_encodings/: BUILD.bazel  decimal_string.expected  decimal_string.h  decimal_string_test_runner.cc
