module(
    name = "p4_infra",
    # Fill in concrete versions only on release branches/in the BCR.
    version = "head",
    bazel_compatibility = [">=7.6.0"],
)

bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "boost.bimap", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.graph", version = "1.90.0.bcr.1")
bazel_dep(name = "googleapis", version = "0.0.0-20260130-c0fcb356")
bazel_dep(name = "googleapis-cc", version = "1.0.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "grpc", version = "1.76.0")
bazel_dep(name = "gutil", version = "20260309.0")
bazel_dep(name = "p4c", version = "1.2.5.11")
bazel_dep(name = "p4runtime", version = "1.5.0.bcr.1")
bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_license", version = "1.0.0")

# Used by the `format.sh` script.
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)
