load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "network_address",
    hdrs = ["network_address.h"],
    deps = [
        "//string_encodings:byte_string",
        "//string_encodings:hex_string",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:status",
    ],
)

cc_library(
    name = "ipv4_address",
    srcs = ["ipv4_address.cc"],
    hdrs = ["ipv4_address.h"],
    deps = [
        ":network_address",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "ipv4_address_and_network_address_test",
    srcs = ["ipv4_address_and_network_address_test.cc"],
    deps = [
        ":ipv4_address",
        "//string_encodings:safe",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:status",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "ipv6_address",
    srcs = ["ipv6_address.cc"],
    hdrs = ["ipv6_address.h"],
    deps = [
        ":network_address",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/numeric:int128",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "ipv6_address_test",
    srcs = ["ipv6_address_test.cc"],
    deps = [
        ":ipv6_address",
        "//string_encodings:safe",
        "@abseil-cpp//absl/numeric:int128",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:status",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "mac_address",
    srcs = ["mac_address.cc"],
    hdrs = ["mac_address.h"],
    deps = [
        ":ipv6_address",
        ":network_address",
        "//string_encodings:hex_string",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "mac_address_test",
    srcs = ["mac_address_test.cc"],
    deps = [
        ":mac_address",
        ":network_address",
        "//string_encodings:safe",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:status",
        "@gutil//gutil:status_matchers",
    ],
)
