load("@gutil//gutil:diff_test.bzl", "cmd_diff_test")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

proto_library(
    name = "packetlib_proto",
    srcs = ["packetlib.proto"],
)

cc_proto_library(
    name = "packetlib_cc_proto",
    deps = [
        ":packetlib_proto",
    ],
)

cc_library(
    name = "bit_widths",
    hdrs = ["bit_widths.h"],
)

cc_library(
    name = "packetlib",
    srcs = ["packetlib.cc"],
    hdrs = ["packetlib.h"],
    deps = [
        ":bit_widths",
        ":packetlib_cc_proto",
        "//netaddr:ipv4_address",
        "//netaddr:ipv6_address",
        "//netaddr:mac_address",
        "//string_encodings:bit_string",
        "//string_encodings:hex_string",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/numeric:bits",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
        "@abseil-cpp//absl/types:variant",
        "@gutil//gutil:overload",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
    ],
)

cc_library(
    name = "packetlib_matchers",
    testonly = True,
    hdrs = ["packetlib_matchers.h"],
    deps = [
        ":packetlib_cc_proto",
        "@gutil//gutil:proto_matchers",
    ],
)

cc_test(
    name = "packetlib_fuzzer_test",
    srcs = ["packetlib_fuzzer_test.cc"],
    deps = [
        ":packetlib",
        "//string_encodings:hex_string",
        "//string_encodings:readable_byte_string",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/random",
        "@abseil-cpp//absl/random:distributions",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
        "@gutil//gutil:status_matchers",
    ],
)

cc_test(
    name = "packetlib_unit_test",
    srcs = ["packetlib_unit_test.cc"],
    deps = [
        ":bit_widths",
        ":packetlib",
        ":packetlib_cc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

cc_test(
    name = "packetlib_test_runner",
    srcs = ["packetlib_test_runner.cc"],
    linkstatic = True,
    deps = [
        ":packetlib",
        ":packetlib_cc_proto",
        "//string_encodings:readable_byte_string",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
        "@gutil//gutil:testing",
        "@protobuf",
    ],
)

cc_test(
    name = "packetlib_matchers_test",
    srcs = ["packetlib_matchers_test.cc"],
    deps = [
        ":packetlib_cc_proto",
        ":packetlib_matchers",
        "@googletest//:gtest_main",
        "@gutil//gutil:testing",
        "@protobuf",
    ],
)

cc_test(
    name = "packetlib_debugging_test",
    srcs = ["packetlib_debugging_test.cc"],
    deps = [
        ":packetlib",
        ":packetlib_cc_proto",
        "//string_encodings:readable_byte_string",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

cmd_diff_test(
    name = "packetlib_test",
    actual_cmd = "$(execpath :packetlib_test_runner)",
    expected = "//packetlib:packetlib_test_runner.expected",
    tools = [
        ":packetlib_test_runner",
    ],
)
