load("@gutil//gutil:diff_test.bzl", "cmd_diff_test")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "byte_string",
    srcs = ["byte_string.cc"],
    hdrs = ["byte_string.h"],
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "byte_string_test",
    srcs = ["byte_string_test.cc"],
    deps = [
        ":byte_string",
        ":safe",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:status",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "safe",
    srcs = ["safe.cc"],
    hdrs = ["safe.h"],
)

cc_library(
    name = "bit_string",
    srcs = ["bit_string.cc"],
    hdrs = ["bit_string.h"],
    deps = [
        ":hex_string",
        "//netaddr:ipv4_address",
        "//netaddr:ipv6_address",
        "//netaddr:mac_address",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "bit_string_test",
    srcs = ["bit_string_test.cc"],
    deps = [
        ":bit_string",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "readable_byte_string",
    srcs = ["readable_byte_string.cc"],
    hdrs = ["readable_byte_string.h"],
    deps = [
        ":bit_string",
        ":hex_string",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "readable_byte_string_test",
    srcs = ["readable_byte_string_test.cc"],
    deps = [
        ":readable_byte_string",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "hex_string",
    srcs = ["hex_string.cc"],
    hdrs = ["hex_string.h"],
    deps = [
        ":safe",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "hex_string_test_runner",
    srcs = ["hex_string_test_runner.cc"],
    linkstatic = True,
    deps = [
        ":hex_string",
        "@abseil-cpp//absl/status",
    ],
)

cmd_diff_test(
    name = "hex_string_test",
    actual_cmd = "$(execpath :hex_string_test_runner)",
    expected = "//string_encodings:hex_string.expected",
    tools = [
        ":hex_string_test_runner",
    ],
)

cc_library(
    name = "decimal_string",
    srcs = ["decimal_string.cc"],
    hdrs = ["decimal_string.h"],
    deps = [
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "decimal_string_test_runner",
    srcs = ["decimal_string_test_runner.cc"],
    linkstatic = True,
    deps = [
        ":decimal_string",
        "@abseil-cpp//absl/status",
    ],
)

cmd_diff_test(
    name = "decimal_string_test",
    actual_cmd = "$(execpath :decimal_string_test_runner)",
    expected = "//string_encodings:decimal_string.expected",
    tools = [
        ":decimal_string_test_runner",
    ],
)
